--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="button_set_now">Выбрать дату</string>
+    <string name="about_app">О приложении</string>
+    <string name="sort">Sorting</string>
 </resources>
