--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="button_set_now">Выбрать дату</string>
     <string name="about_app">О приложении</string>
     <string name="sort">Sorting</string>
+    <string name="delete">Delete</string>
 </resources>
